fixed url in bg image

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ body {
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(/images/hero-bg.jpg);
+    url(../images/hero-bg.jpg);
   background-size: cover;
   background-color: #c4c4c4;
 }
