fixed hover, focus on portfolio card

--- a/css/styles.css
+++ b/css/styles.css
@@ -521,8 +521,11 @@ body {
 .portfolio-specification {
   color: var(--primary-text-color);
 }
-.portfolio-list-item:hover,
-.portfolio-list-item:focus {
+.portfolio-list-link {
+  display: block;
+}
+.portfolio-list-link:hover,
+.portfolio-list-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
